Fix selected border of sprotty being visible

--- a/src/theme.css
+++ b/src/theme.css
@@ -14,6 +14,9 @@
         --color-primary: #222;
         --color-tool-palette-hover: #444;
         --color-tool-palette-selected: #555;
+    }
+
+    #sprotty div {
         color-scheme: dark;
     }
 }
